--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -22,7 +22,7 @@ header {
 
 #load {
     background: transparent;
-    border-radius: 6px;
+    border-radius: 3px;
     border: 1px solid #000;
     height: 2em;
 }
@@ -57,6 +57,10 @@ header {
   background-color: #fff;
 }
 
-#prev:hover, #next:hover {
+.btn:hover {
   cursor: pointer;
+}
+
+.btn:hover path {
+  stroke: #ccc;
 }
